--- a/Home_Sales_starter_code_colab.ipynb
+++ b/Home_Sales_starter_code_colab.ipynb
@@ -2,25 +2,25 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a_KW73O2e3dw",
-        "outputId": "69c30d44-7673-45bd-ab0f-1ec1819e02a8"
+        "outputId": "2232de15-8f89-4540-de2f-8acbf66aa9a8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
-            "\r0% [Connecting to security.ubuntu.com (185.125.190.81)] [Connected to cloud.r-project.org (3.171.85.\r                                                                                                    \rHit:2 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
-            "\r                                                                                                    \rHit:3 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
-            "\r                                                                                                    \rHit:4 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
-            "\r0% [Connecting to security.ubuntu.com (185.125.190.81)] [Connected to r2u.stat.illinois.edu (192.17.\r                                                                                                    \rHit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
-            "\r0% [Waiting for headers] [Connected to r2u.stat.illinois.edu (192.17.190.167)] [Connected to ppa.lau\r                                                                                                    \rHit:6 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
+            "\r0% [Working]\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
+            "\r0% [Waiting for headers] [Connecting to security.ubuntu.com (91.189.91.83)] [Connected to r2u.stat.i\r                                                                                                    \rHit:2 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "\r0% [Waiting for headers] [Waiting for headers] [Connected to r2u.stat.illinois.edu (192.17.190.167)]\r                                                                                                    \rHit:3 http://archive.ubuntu.com/ubuntu jammy-updates InRelease\n",
+            "Hit:4 http://security.ubuntu.com/ubuntu jammy-security InRelease\n",
+            "Hit:5 http://archive.ubuntu.com/ubuntu jammy-backports InRelease\n",
+            "Hit:6 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
             "Hit:7 https://r2u.stat.illinois.edu/ubuntu jammy InRelease\n",
             "Hit:8 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
             "Hit:9 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease\n",
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "2XbWNf1Te5fM"
       },
@@ -72,13 +72,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 3,
       "metadata": {
         "id": "wOJqxG_RPSwp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2532333a-bb68-44c1-f001-056a868172b3"
+        "outputId": "06032ff7-04df-496c-b292-0e82670ba923"
       },
       "outputs": [
         {
@@ -135,54 +135,56 @@
       "metadata": {
         "id": "6jMv7gMyyD6M"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 5,
       "metadata": {
         "id": "L6fkwOeOmqvq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "36411c36-5ccc-4eb3-c98e-40d6d99daa48"
+        "outputId": "6a163229-3a90-4a09-e2af-138515c12b7b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+----------+---------+\n",
-            "|date_built|avg_price|\n",
-            "+----------+---------+\n",
-            "|      2010|296800.75|\n",
-            "|      2011| 302141.9|\n",
-            "|      2012|298233.42|\n",
-            "|      2013|299999.39|\n",
-            "|      2014|299073.89|\n",
-            "|      2015|307908.86|\n",
-            "|      2016|296050.24|\n",
-            "|      2017|296576.69|\n",
-            "+----------+---------+\n",
+            "+----+---------+\n",
+            "|year|avg_price|\n",
+            "+----+---------+\n",
+            "|2019| 300263.7|\n",
+            "|2020|298353.78|\n",
+            "|2021|301819.44|\n",
+            "|2022|296363.88|\n",
+            "+----+---------+\n",
             "\n"
           ]
         }
       ],
       "source": [
         "# 3. What is the average price for a four bedroom house sold per year, rounded to two decimal places?\n",
-        "spark.sql(\"SELECT date_built,ROUND(avg(price),2) AS avg_price FROM home_sales WHERE bedrooms=4 GROUP BY date_built ORDER BY date_built\").show()"
+        "spark.sql(\"\"\"\n",
+        "SELECT YEAR(date) as year, ROUND(avg(price),2) AS avg_price\n",
+        "FROM home_sales\n",
+        "WHERE bedrooms=4\n",
+        "GROUP BY year\n",
+        "ORDER BY year\n",
+        "\"\"\").show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 6,
       "metadata": {
         "id": "l8p_tUS8h8it",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "57f5e2d6-f518-4131-c864-14951c583d28"
+        "outputId": "59b454e8-c48e-4cf2-a86e-d4503cfb071c"
       },
       "outputs": [
         {
@@ -220,13 +222,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 7,
       "metadata": {
         "id": "Y-Eytz64liDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ad1fa36-a672-498c-a5a2-5b83de7b350f"
+        "outputId": "19837228-dec5-42c7-9741-74aea4ea82d5"
       },
       "outputs": [
         {
@@ -268,13 +270,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GUrfgOX1pCRd",
-        "outputId": "e9935a70-43d1-4b4b-ce27-de90d37f048c"
+        "outputId": "c83a2c50-158f-4017-8419-013c0fdde110"
       },
       "outputs": [
         {
@@ -307,7 +309,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 1.036327838897705 seconds ---\n"
+            "--- 1.0051660537719727 seconds ---\n"
           ]
         }
       ],
@@ -333,13 +335,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 9,
       "metadata": {
         "id": "KAhk3ZD2tFy8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "815e017d-2bf7-4ba4-b57a-59ac9f6771c0"
+        "outputId": "c482510d-d773-4ad5-f0aa-513144201872"
       },
       "outputs": [
         {
@@ -350,7 +352,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 9
         }
       ],
       "source": [
@@ -360,13 +362,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 10,
       "metadata": {
         "id": "4opVhbvxtL-i",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49d9c18f-f387-4c2b-a9b4-9b1078795c3e"
+        "outputId": "8336ac12-9ebd-4e71-c1be-6fad5a7159a9"
       },
       "outputs": [
         {
@@ -377,7 +379,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 10
         }
       ],
       "source": [
@@ -387,13 +389,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GnL46lwTSEk",
-        "outputId": "990720dc-08f1-4356-e547-9523d06e7030"
+        "outputId": "2092d6cb-94e4-4a06-aa3a-edee23bf71be"
       },
       "outputs": [
         {
@@ -426,7 +428,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 0.41877174377441406 seconds ---\n"
+            "--- 0.5086524486541748 seconds ---\n"
           ]
         }
       ],
@@ -453,7 +455,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Difference of 0.61 seconds between uncached and cached run times**"
+        "**Difference of 0.5 seconds between uncached and cached run times**"
       ],
       "metadata": {
         "id": "uIbvd7DO2tKe"
@@ -461,7 +463,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 12,
       "metadata": {
         "id": "Qm12WN9isHBR"
       },
@@ -473,7 +475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 13,
       "metadata": {
         "id": "AZ7BgY61sRqY"
       },
@@ -485,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 14,
       "metadata": {
         "id": "J6MJkHfvVcvh"
       },
@@ -497,13 +499,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G_Vhb52rU1Sn",
-        "outputId": "be90fc7f-790f-4ec4-b4c2-9fe69e1f5756"
+        "outputId": "a2122649-3704-4026-b282-9a9ee3b006de"
       },
       "outputs": [
         {
@@ -536,7 +538,7 @@
             "+----+----------+\n",
             "only showing top 20 rows\n",
             "\n",
-            "--- 1.137843370437622 seconds ---\n"
+            "--- 0.9947497844696045 seconds ---\n"
           ]
         }
       ],
@@ -562,7 +564,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**The query took 0.72 seconds longer in the parquet DF vs the cached DF**"
+        "**The query took 0.48 seconds longer in the parquet DF vs the cached DF**"
       ],
       "metadata": {
         "id": "sd8w70oi6CWC"
@@ -570,13 +572,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 16,
       "metadata": {
         "id": "hjjYzQGjtbq8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b9990db5-7dab-4334-c76d-b8fe66fe14a8"
+        "outputId": "2a129f47-c430-4968-d2f8-bdd959582355"
       },
       "outputs": [
         {
@@ -587,7 +589,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 16
         }
       ],
       "source": [
@@ -597,13 +599,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 17,
       "metadata": {
         "id": "Sy9NBvO7tlmm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab383f30-a157-4565-c334-3a746c77e2c7"
+        "outputId": "51b9330f-2b91-45cb-a808-552e135c7b2d"
       },
       "outputs": [
         {
@@ -614,7 +616,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 17
         }
       ],
       "source": [
